--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -49,6 +49,40 @@ input {
     width: 100%;
 }
 
+/* Styling for create ad categories */
+
+
+.checkboxes {
+    position: relative;
+    display: block;
+}
+
+.categoryLabel {
+    position: absolute;
+    display: inline;
+}
+
+.categorySelect:checked + .categoryLabel {
+    font-weight: bold;
+    color: green;
+}
+
+#xboxlabel {
+    bottom: 2px;
+}
+
+#playstationlabel {
+    bottom: 250px;
+}
+
+#nintendolabel {
+    bottom: 217px;
+}
+
+#pclabel {
+    bottom: 182px;
+}
+
 
 
 /* Style the container for inputs */
@@ -77,3 +111,10 @@ input {
     color: #4CAF50;
 }
 
+@media (max-width: 576px) {
+    .card {
+        width: 100%;
+    }
+
+
+}
